--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.5",
     "redis": "^3.1.2",
     "uuid": "^8.3.2",
     "xss-clean": "^0.1.1"
