--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ DB_NAME =fw11fajri_ticketing
 PORT =3001
 SECRETKEY =#$dAsdGazS
 
+REDIS_HOSTNAME=redis-13883.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=13883
+REDIS_PASSWORD=cGqNdcsthY7FiynEGlPm1EdNtitRI6V1
+
