--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DB_HOST =ec2-54-236-24-175.compute-1.amazonaws.com
-DB_USER =fw11fajri
-DB_PASS =SLAr78
-DB_NAME =fw11fajri_ticketing
+DB_HOST =yourhost
+DB_USER =youruser
+DB_PASS =yourpass
+DB_NAME =yourdbname
 PORT =3001
-SECRETKEY =#$dAsdGazS
+SECRETKEY =yoursecretkey
 
-REDIS_HOSTNAME=redis-13883.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
-REDIS_PORT=13883
-REDIS_PASSWORD=cGqNdcsthY7FiynEGlPm1EdNtitRI6V1
+REDIS_HOSTNAME=yourredishost
+REDIS_PORT=yourredisport
+REDIS_PASSWORD=yourredispassword
 
