--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
-DB_HOST =yourhost
-DB_USER =youruser
-DB_PASS =yourpass
+DB_HOST =yourdbhost
+DB_USER =youruserdb
+DB_PASS =yourpassdb
 DB_NAME =yourdbname
 PORT =3001
-SECRETKEY =yoursecretkey
+SECRETKEY =yourkey
 
-REDIS_HOSTNAME=yourredishost
-REDIS_PORT=yourredisport
-REDIS_PASSWORD=yourredispassword
+// activation email
+SENDERMAIL = youremail
+PASSMAIL = yourpass
+ACTIVATION_TOKEN_SECRET = yourtokensecret
+
+// midtrans
+MIDTRANS_PRODUCTION = prod/dev
+MIDTRANS_CLIENTKEY = yourkey
+MIDTRANS_SERVERKEY = yourkey
+
+// redis
+REDIS_HOSTNAME=yourhostname
+REDIS_PORT=yourport
+REDIS_PASSWORD=yourpass
 
