--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.1",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.2.5",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.5",
+    "nodemailer-express-handlebars": "^4.0.0",
     "redis": "^3.1.2",
     "uuid": "^8.3.2",
     "xss-clean": "^0.1.1"
