updates: change limit paginate movie & schedule

--- a/.env
+++ b/.env
@@ -1,22 +1,24 @@
-DB_HOST =yourdbhost
-DB_USER =youruserdb
-DB_PASS =yourpassdb
-DB_NAME =yourdbname
+DB_HOST =ec2-54-236-24-175.compute-1.amazonaws.com
+DB_USER =fw11fajri
+DB_PASS =SLAr78
+DB_NAME =fw11fajri_ticketing
 PORT =3001
-SECRETKEY =yourkey
+SECRETKEY =#$dAsdGazS
 
 // activation email
-SENDERMAIL = youremail
-PASSMAIL = yourpass
-ACTIVATION_TOKEN_SECRET = yourtokensecret
+SENDERMAIL = fajritest123@gmail.com
+PASSMAIL = fajri123!
+ACTIVATION_TOKEN_SECRET = 9R?74t8p%A&2EHX$PS}u?t
 
 // midtrans
-MIDTRANS_PRODUCTION = prod/dev
-MIDTRANS_CLIENTKEY = yourkey
-MIDTRANS_SERVERKEY = yourkey
+MIDTRANS_PRODUCTION = false
+MIDTRANS_CLIENTKEY = SB-Mid-client-QfpskjY_JrVoNJgZ
+MIDTRANS_SERVERKEY = SB-Mid-server-PpNyUzZ7wXIBHovslfS9xvkl
 
 // redis
-REDIS_HOSTNAME=yourhostname
-REDIS_PORT=yourport
-REDIS_PASSWORD=yourpass
+REDIS_HOSTNAME=redis-13883.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=13883
+REDIS_PASSWORD=cGqNdcsthY7FiynEGlPm1EdNtitRI6V1
+
+
 
