--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
-DB_HOST =localhost
-DB_USER =root
-DB_PASS =
-DB_NAME =ticketing
+DB_HOST =ec2-54-236-24-175.compute-1.amazonaws.com
+DB_USER =fw11fajri
+DB_PASS =SLAr78
+DB_NAME =fw11fajri_ticketing
 PORT =3001
 SECRETKEY =#$dAsdGazS
 
